Add information for cosplay wettbewerb

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -12,25 +12,27 @@
                 <h3 class="fw-bold">Unsere Wettbewerbe</h3>
             </div>
         </div>
-        @* <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+        <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
             <div class="col mb-5"><img class="rounded img-fluid shadow" src="assets/img/Eventbilder/Franco/DSC00317.jpg"></div>
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
                     <h5 class="fw-bold">Cosplaywettbewerb</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
                     <div class="row">
-                        <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/1i8AUm0TSBx6efNvsee9AlOIs1YYyRurl/view?usp=sharing" target="_blank">Regeln</a></div>
-                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/deGAYgBZBMRkF8W76" target="_blank">Anmeldung</a></div>
+                        <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/1hCNkwXyEgGTMsbVyNvAhofofeuwH6v8i/view?usp=sharing" target="_blank">Regeln</a></div>
+                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSek9v_khEwYeL-CAcVKrWV2qugVy9Sps95t7C4bIj-9OgqJQQ/viewform?usp=sf_link" target="_blank">Anmeldung</a></div>
                     </div>
                 </div>
             </div>
-        </div> *@
+        </div>
+
         <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-            <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="assets/img/Eventbilder/Mapel_Chan/IMG_20220919_151239_937.jpg"></div>
+            <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div>
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
-                    <h5 class="fw-bold">Coming soon...</h5>
-                    <p class="text-muted mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-primary disabled shadow" type="button" disabled="">Erfahre mehr</button>
+                    <h5 class="fw-bold">Mitmachen als Jurymitglied</h5>
+                    <p class="text-muted mb-4">Interessiert an Cosplay, aber nicht bereit, auf der Bühne zu stehen? Kein Problem! Wir suchen auch nach engagierten und leidenschaftlichen Cosplay-Enthusiasten, die als Jurymitglieder an unserem Wettbewerb teilnehmen möchten. Als Jurymitglied haben Sie die Möglichkeit, die erstaunlichen Kostüme und Performances unserer Teilnehmer zu bewerten und dabei zu helfen, den Gewinner unseres Wettbewerbs zu bestimmen.</p>
+                    <a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSeQYk_MzoLo75lKKsYjAip9sEPkkfKo14EIg6UrDcitfvrzqQ/viewform?usp=sf_link" target="_blank">Bewerbung</a>
                 </div>
             </div>
         </div>
