--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
                     @* <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a> *@
                     @* <div class="dropdown-menu" data-bs-popper="none"> *@
                         @* <NavLink class="dropdown-item" href="flyer">Flyer</NavLink> *@
-                        @* <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink> *@
+                        <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink>
                         @* <NavLink class="dropdown-item" href="gala">DanPa-Gala</NavLink> *@
                     @* </div> *@
                 @* </li> *@
