--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -27,7 +27,7 @@
         </div>
 
         <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-            <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div>
+            @* <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div> *@
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
                     <h5 class="fw-bold">Mitmachen als Jurymitglied</h5>
