--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -22,7 +22,7 @@
                             <div>
                                 <h3 class="fw-bold mb-0">Normaler Eintritt</h3>
                                 <p>Für jeden</p>
-                                <h4 class="display-4 fw-bold">0,99 €</h4>
+                                <h4 class="display-4 fw-bold">2 €</h4>
                             </div>
                         </div>
                         <div>
@@ -89,7 +89,15 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-3" aria-expanded="false" aria-controls="accordion-2 .item-3">Warum werden die Tickets nicht online verkauft?</button></h2>
                         <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-2">
                             <div class="accordion-body">
-                                <p class="mb-0">Unser Ticketpreis beträgt nur 99 Cent, das online zu verkaufen würde durch die ganzen Gebühren der Zahlungsanbieter mehr kosten, als das Ticket überhaupt kostet. Unter dem Strich würden wir also Geld verlieren. Deshalb haben wir uns entschieden, die Tickets vor Ort zu verkaufen.</p>
+                                <p class="mb-0">Unser Ticketpreis ist zu niedrig, das online zu verkaufen würde durch die ganzen Gebühren der Zahlungsanbieter mehr kosten, als das Ticket überhaupt kostet. Unter dem Strich würden wir also Geld verlieren. Deshalb haben wir uns entschieden, die Tickets vor Ort zu verkaufen.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-4" aria-expanded="false" aria-controls="accordion-2 .item-4">Warum haben wir den Preis angehoben?</button></h2>
+                        <div class="accordion-collapse collapse item-4" role="tabpanel" data-bs-parent="#accordion-2">
+                            <div class="accordion-body">
+                                <p class="mb-0">Das SAMT hat jahrelang nur 0,99 € gekostet. Wir konnten das trotz der Inflation nur so lang aufrechterhalten, da unser Veranstaltungsort für uns kostenlos war. Leider wird von uns hier nun pro Besucher, den wir haben 1 € verlangt. Um der Anforderung gerecht werden zu können und euch weiterhin stetige Verbesserungen bieten zu können, haben wir gemeinsam mit euch über eine Abstimmung auf Instagram entschieden, unseren Preis auf 2 € anzuheben.</p>
                             </div>
                         </div>
                     </div>
