--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -97,7 +97,7 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-4" aria-expanded="false" aria-controls="accordion-2 .item-4">Warum haben wir den Preis angehoben?</button></h2>
                         <div class="accordion-collapse collapse item-4" role="tabpanel" data-bs-parent="#accordion-2">
                             <div class="accordion-body">
-                                <p class="mb-0">Das SAMT hat jahrelang nur 0,99 € gekostet. Wir konnten das trotz der Inflation nur so lang aufrechterhalten, da unser Veranstaltungsort für uns kostenlos war. Leider wird von uns hier nun pro Besucher, den wir haben 1 € verlangt. Um der Anforderung gerecht werden zu können und euch weiterhin stetige Verbesserungen bieten zu können, haben wir gemeinsam mit euch über eine Abstimmung auf Instagram entschieden, unseren Preis auf 2 € anzuheben.</p>
+                                <p class="mb-0">Das SAMT hat jahrelang nur 0,99 € gekostet, das war unsere Tradition. Wir konnten das trotz der Inflation nur so lang aufrechterhalten, da unser Veranstaltungsort für uns kostenlos war. Leider wird von uns hier nun pro Besucher, den wir haben 1 € verlangt. Um der Anforderung gerecht werden zu können und euch weiterhin stetige Verbesserungen bieten zu können, haben wir gemeinsam mit euch über eine Abstimmung auf Instagram entschieden, unseren Preis auf 2 € anzuheben.</p>
                             </div>
                         </div>
                     </div>
