Summary of Changes: The most significant changes involve the removal of visibility for certain dropdown menu items on the website. Specifically, the "Programm" dropdown menu and its sub-menu items, as well as the links for "Aussteller-Bewerbung", "Workshop-Bewerbung", and "Showact-Bewerbung" under the "Bewerbungen" dropdown menu have been commented out.
List of Changes:

1. The "Programm" dropdown menu and its sub-menu items have been commented out. This means they will no longer be visible on the website. (Refer to the code changes in the file where the "Programm" dropdown menu is defined)

2. The links for "Aussteller-Bewerbung", "Workshop-Bewerbung", and "Showact-Bewerbung" under the "Bewerbungen" dropdown menu have been commented out. This means they will no longer be visible on the website. (Refer to the code changes in the file where the "Bewerbungen" dropdown menu is defined)

--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -5,23 +5,23 @@
         <div class="collapse navbar-collapse text-center" id="navcol-1">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="/">Start</NavLink></li>
-                <li class="nav-item dropdown">
-                    <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a>
-                    <div class="dropdown-menu" data-bs-popper="none">
+                @* <li class="nav-item dropdown"> *@
+                    @* <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a> *@
+                    @* <div class="dropdown-menu" data-bs-popper="none"> *@
                         @* <NavLink class="dropdown-item" href="flyer">Flyer</NavLink> *@
-                        <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink>
+                        @* <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink> *@
                         @* <NavLink class="dropdown-item" href="gala">DanPa-Gala</NavLink> *@
-                    </div>
-                </li>
+                    @* </div> *@
+                @* </li> *@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="anfahrt">Wann & Wo?</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="tickets">Tickets & Preise</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="bnb">Bring & Buy</NavLink></li>
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Bewerbungen</a>
                     <div class="dropdown-menu" data-bs-popper="none">
-                        <NavLink class="dropdown-item" href="https://forms.gle/TMMN4FBxdTpM3ZQ7A" target="_blank" rel="external">Aussteller-Bewerbung</NavLink>
-                        <NavLink class="dropdown-item" href="https://forms.gle/NWTEz1Dhz7diLNod8" target="_blank" rel="external">Workshop-Bewerbung</NavLink>
-                        <NavLink class="dropdown-item" href="https://forms.gle/br7c2xUKfY26hJE68" target="_blank" rel="external">Showact-Bewerbung</NavLink>
+                        @* <NavLink class="dropdown-item" href="https://forms.gle/TMMN4FBxdTpM3ZQ7A" target="_blank" rel="external">Aussteller-Bewerbung</NavLink>
+                        @* <NavLink class="dropdown-item" href="https://forms.gle/NWTEz1Dhz7diLNod8" target="_blank" rel="external">Workshop-Bewerbung</NavLink> *@
+                        @* <NavLink class="dropdown-item" href="https://forms.gle/br7c2xUKfY26hJE68" target="_blank" rel="external">Showact-Bewerbung</NavLink> *@
                     </div>
                 </li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="kontakt">Kontakt</NavLink></li>
