The most significant change is the removal of the "Bewerbungen" dropdown menu from the navigation menu. This change makes the dropdown menu and its contents invisible and inaccessible to users.
Changes:
1. Commented out the "Bewerbungen" dropdown menu from the navigation menu, making it and its contents invisible and inaccessible to users. (Refer to the code changes in the navigation menu file)

--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -16,14 +16,14 @@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="anfahrt">Wann & Wo?</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="tickets">Tickets & Preise</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="bnb">Bring & Buy</NavLink></li>
-                <li class="nav-item dropdown">
-                    <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Bewerbungen</a>
-                    <div class="dropdown-menu" data-bs-popper="none">
+                @* <li class="nav-item dropdown"> *@
+                    @* <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Bewerbungen</a> *@
+                    @* <div class="dropdown-menu" data-bs-popper="none"> *@
                         @* <NavLink class="dropdown-item" href="https://forms.gle/TMMN4FBxdTpM3ZQ7A" target="_blank" rel="external">Aussteller-Bewerbung</NavLink>
                         @* <NavLink class="dropdown-item" href="https://forms.gle/NWTEz1Dhz7diLNod8" target="_blank" rel="external">Workshop-Bewerbung</NavLink> *@
                         @* <NavLink class="dropdown-item" href="https://forms.gle/br7c2xUKfY26hJE68" target="_blank" rel="external">Showact-Bewerbung</NavLink> *@
-                    </div>
-                </li>
+                    @* </div> *@
+                @* </li> *@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="kontakt">Kontakt</NavLink></li>
             </ul><a class="btn btn-primary shadow" role="button" href="https://discord.gg/QHC3UE9" target="_blank" rel="external" style="margin-right: 15px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="font-size: 25px;margin-top: -3px;margin-right: 3px;">
