Update resposible persons and adresses

--- a/SAMT-Website/Pages/Impressum.razor
+++ b/SAMT-Website/Pages/Impressum.razor
@@ -6,14 +6,14 @@
     <div class='impressum'>
         <h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>
             Jan Jaden Schmidt <br>
-            Sinnerbach 19<br>
-            57080 Siegen <br> <br>
+            Johannes-Rau-Weg 17<br>
+            57223 Kreuztal <br> <br>
             jaden.schmidt@jumaev.de <br>
             +49 151 10268749 <br>
         </p><p>
             <strong>Vertreten durch: </strong><br>
             Jan Jaden Schmidt<br>
-            Mamdouh Maduar<br>
+            Julian Menn<br>
         </p><p>
             <strong>Registereintrag: </strong><br>
             Eintragung im Vereinsregister.<br>
