--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -19,9 +19,9 @@
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Bewerbungen</a>
                     <div class="dropdown-menu" data-bs-popper="none">
-                        <NavLink class="dropdown-item" href="https://forms.gle/TMMN4FBxdTpM3ZQ7A" target="_blank" rel="external">Aussteller-Bewerbung</NavLink>
-                        <NavLink class="dropdown-item" href="https://forms.gle/NWTEz1Dhz7diLNod8" target="_blank" rel="external">Workshop-Bewerbung</NavLink>
-                        <NavLink class="dropdown-item" href="https://forms.gle/br7c2xUKfY26hJE68" target="_blank" rel="external">Showact-Bewerbung</NavLink>
+                        <NavLink class="dropdown-item" href="https://forms.gle/nkE2K5jw47kdfPBz9" target="_blank" rel="external">Aussteller-Bewerbung</NavLink>
+                        <NavLink class="dropdown-item" href="https://forms.gle/zYVAviMFmkGipVXe8" target="_blank" rel="external">Workshop-Bewerbung</NavLink>
+                        <NavLink class="dropdown-item" href="https://forms.gle/nF1AB59G1Uggmsyj9" target="_blank" rel="external">Showact-Bewerbung</NavLink>
                     </div>
                 </li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="kontakt">Kontakt</NavLink></li>
