Favicon aktualisiert und media query für dunkles Farbschema hinzugefügt
Die Verweise auf das Favicon wurden geändert. Ursprünglich wurde ein PNG-Bild mit den Maßen 301x303 Pixel verwendet, das unter dem Pfad "assets/img/Logos/Krone.png" zu finden war. Dieser Verweis wurde entfernt. Stattdessen wurde ein SVG-Bild mit den Maßen 262x150 Pixel hinzugefügt, das unter dem Pfad "assets/img/Logos/Samt%20Logo_SVG.svg" zu finden ist. Dieses Bild wird nun als neues Favicon verwendet. Zusätzlich wurde eine media query hinzugefügt, die das Favicon für Nutzer mit aktiviertem dunklen Farbschema ändert.

--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -42,11 +42,13 @@
     <meta name="description" content="Das Siegener Anime und Manga Treff (kurz SAMT) ist die erste Anime und Manga Convention in Siegen.">
     <meta property="og:image" content="assets/img/Logos/samt-logo-2-chibi%20edit%203.png">
     <meta name="twitter:image" content="assets/img/Logos/samt-logo-2-chibi%20edit%203.png">
-    <link rel="icon" type="image/png" sizes="301x303" href="assets/img/Logos/Krone.png">
-    <link rel="icon" type="image/png" sizes="301x303" href="assets/img/Logos/Krone.png">
-    <link rel="icon" type="image/png" sizes="301x303" href="assets/img/Logos/Krone.png">
-    <link rel="icon" type="image/png" sizes="301x303" href="assets/img/Logos/Krone.png">
-    <link rel="icon" type="image/png" sizes="301x303" href="assets/img/Logos/Krone.png">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg">
+    <link rel="icon" type="image/svg+xml" sizes="262x150" href="assets/img/Logos/Samt%20Logo_SVG.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
