Refactor namespaces, update DbContext, add new entities
Die `namespace`-Deklarationen in `Event.cs`, `EventsBringAndBuy.cs` und `Location.cs` wurden geändert, um die Klassen direkt im `namespace` zu definieren.

Neue Eigenschaften in `Event.cs`: `ApplyOpen`, `ApplyClose`, `BringAndBuy` und `Price`. Initialisierungen der `ICollection`-Eigenschaften auf `new List<T>()` geändert.

`samt_websiteContext.cs` entfernt und durch `SamtWebsiteContext.cs` ersetzt. `DbContext`-Typ in mehreren `.razor`-Dateien und `Program.cs` aktualisiert.

Preis in `Pricing.razor` dynamisch gemacht. Bedingungen in `NavMenu.razor` hinzugefügt, um Menüpunkte basierend auf Event-Eigenschaften anzuzeigen.

Neue ASP.NET Identity-Klassen hinzugefügt: `AspNetRole`, `AspNetRoleClaim`, `AspNetUser`, `AspNetUserClaim`, `AspNetUserLogin`, `AspNetUserToken` und `EfmigrationsHistory`.

Neue Klassen in `EventsExhibitorsApply.cs` hinzugefügt: `EventsExhibitorsApply`, `EventsShowactApply`, `EventsWorkshopsApply`, `User`, `UsersSocialMediaCustom` und `UsersSocialMedium`.

`SamtWebsiteContext.cs` hinzugefügt, um die Datenbankverbindung zu konfigurieren und `DbSet`-Eigenschaften zu definieren. `OnModelCreating`-Methode implementiert, um Tabellen und Beziehungen zu konfigurieren.

--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -4,7 +4,7 @@
 @using Microsoft.EntityFrameworkCore
 @using Database.Models
 @inject ILocalStorageService localStorage
-@inject IDbContextFactory<samt_websiteContext> DbFactory
+@inject IDbContextFactory<SamtWebsiteContext> DbFactory
 
 <PageTitle>Bring & Buy Infos</PageTitle>
 
@@ -55,7 +55,7 @@
 </section><!-- End: Bring and Buy Info -->
 @code
 {
-    samt_websiteContext context;
+    SamtWebsiteContext context;
 
     string currentEventId = "-1";
 
