--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -5,7 +5,7 @@
 @using Database.Models
 @using System.Globalization
 
-@inject IDbContextFactory<samt_websiteContext> DbFactory
+@inject IDbContextFactory<SamtWebsiteContext> DbFactory
 @inject IJSRuntime js
 
 @{
