--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -9,7 +9,7 @@
 @using Database.Models
 @using Microsoft.EntityFrameworkCore
 
-@inject IDbContextFactory<samt_websiteContext> DbFactory
+@inject IDbContextFactory<SamtWebsiteContext> DbFactory
 
 @{
     var context = DbFactory.CreateDbContext();
