--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -5,13 +5,7 @@
 @using Database.Models
 @using System.Globalization
 
-@inject IDbContextFactory<SamtWebsiteContext> DbFactory
 @inject IJSRuntime js
-
-@{
-    var context = DbFactory.CreateDbContext();
-    var samt = context.Events.OrderBy(x => x.Date).Include(x => x.FkLocation).ToList().SkipWhile(x => x.Date <= DateTime.Now).FirstOrDefault();
-}
 
 <PageTitle>SAMT - Siegener Anime und Manga Treff</PageTitle>
 
@@ -21,15 +15,15 @@
         <div class="row pt-5">
             <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto" style="margin-top: -48px;">
                 <div class="text-center">
-                    @if (samt is null)
+                    @if (_samt is null)
                     {
                         <img class="img-fluid" src="https://i.imgur.com/D9jeMkR.png" width="300" alt="SAMT Logo">
                         <p class="mb-4" style="font-size: 1.6rem;">Coming soon... <br><span class="text-success"><strong>QwQ</strong></span><br> UwU</p>
                     }
                     else
                     {
-                        <img class="img-fluid" src="@samt.ImageLink" width="300" alt="SAMT Logo">
-                        <p class="mb-4" style="font-size: 1.6rem;">@samt.Name <br><span class="text-success"><strong>@samt.Date.ToString(CultureInfo.CurrentCulture.DateTimeFormat.LongDatePattern)</strong></span><br> @samt.FkLocation.Name</p>
+                        <img class="img-fluid" src="@_samt.ImageLink" width="300" alt="SAMT Logo">
+                        <p class="mb-4" style="font-size: 1.6rem;">@_samt.Name <br><span class="text-success"><strong>@_startDate.Date.ToDateTime(_startDate.StartTime).ToString(CultureInfo.CurrentCulture.DateTimeFormat.LongDatePattern)</strong></span><br> @_samt.FkLocation.Name</p>
                         @if (!_days.Equals("00") || !_hours.Equals("00") || !_minutes.Equals("00") || !_seconds.Equals("00"))
                         {
                             <div class="row">
@@ -306,10 +300,17 @@
     string _minutes = string.Empty;
     string _seconds = string.Empty;
 
+    [CascadingParameter]
+    public Event? _samt { get; set; }
+
+    [CascadingParameter]
+    public EventsDateTime? _startDate { get; set; }
+
     protected override void OnInitialized()
     {
-        Countdown();
         base.OnInitialized();
+
+        Countdown();
     }
 
     /**
@@ -322,16 +323,17 @@
     async void Countdown()
     {
         // Obtain an instance of the DbContext through the DbFactory
-        var samt = (await DbFactory.CreateDbContextAsync()).Events.OrderBy(x => x.Date).ToList().SkipWhile(x => x.Date <= DateTime.Now).FirstOrDefault();
+        if (_startDate == null) return;
+        var samt = _startDate.Date.ToDateTime(_startDate.StartTime);
 
         // The countdown will continue to loop until the event date is reached
-        while (samt is not null && samt.Date > DateTime.Now)
+        while (samt > DateTime.Now)
         {
             // Wait a second before updating the countdown
             await Task.Delay(1000);
 
             // Calculate the countdown time remaining
-            var countdown = samt.Date.Subtract(DateTime.Now);
+            var countdown = samt.Subtract(DateTime.Now);
 
             // Update the properties representing the countdown values
             _days = countdown.Days.ToString("D2");
