--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -26,16 +26,16 @@
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+        @* <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;"> *@
             @* <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div> *@
-            <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
+            @* <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
                     <h5 class="fw-bold">Mitmachen als Jurymitglied</h5>
                     <p class="text-muted mb-4">Interessiert an Cosplay, aber nicht bereit, auf der Bühne zu stehen? Kein Problem! Wir suchen auch nach engagierten und leidenschaftlichen Cosplay-Enthusiasten, die als Jurymitglieder an unserem Wettbewerb teilnehmen möchten. Als Jurymitglied haben Sie die Möglichkeit, die erstaunlichen Kostüme und Performances unserer Teilnehmer zu bewerten und dabei zu helfen, den Gewinner unseres Wettbewerbs zu bestimmen.</p>
                     <a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSeQYk_MzoLo75lKKsYjAip9sEPkkfKo14EIg6UrDcitfvrzqQ/viewform?usp=sf_link" target="_blank">Bewerbung</a>
                 </div>
             </div>
-        </div>
+        </div> *@
     </div><!-- End: Features Cards -->
 </section>
 
