Fix cosplay contest info

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -19,8 +19,8 @@
                     <h5 class="fw-bold">Cosplaywettbewerb</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
                     <div class="row">
-                        <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/1NkuvhlKh26UbITSp-_ShWvNMfFA9LAGj/view?usp=sharing" target="_blank">Regeln</a></div>
-                        @* <div class="col"><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSek9v_khEwYeL-CAcVKrWV2qugVy9Sps95t7C4bIj-9OgqJQQ/viewform?usp=sf_link" target="_blank">Anmeldung</a></div> *@
+                        <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/13HXV5XjPAuU53CHusSswB2PoD3VYthqJ/view?usp=drive_link" target="_blank">Regeln</a></div>
+                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://drive.google.com/file/d/12zjENeiqApSROaXfkTy_bhcPlqsUGt8y/view?usp=drive_link" target="_blank">Erklärung</a></div>
                     </div>
                 </div>
             </div>
