--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -19,6 +19,9 @@
                     <h5 class="fw-bold">Cosplaywettbewerb</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
                     <div class="row">
+                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
+                    </div>
+                    <div class="row">
                         <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/13HXV5XjPAuU53CHusSswB2PoD3VYthqJ/view?usp=drive_link" target="_blank">Regeln</a></div>
                         <div class="col"><a class="btn btn-primary shadow" role="button" href="https://drive.google.com/file/d/12zjENeiqApSROaXfkTy_bhcPlqsUGt8y/view?usp=drive_link" target="_blank">Erklärung</a></div>
                     </div>
@@ -27,14 +30,14 @@
         </div>
 
         @* <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;"> *@
-            @* <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div> *@
-            @* <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
-                <div>
-                    <h5 class="fw-bold">Mitmachen als Jurymitglied</h5>
-                    <p class="text-muted mb-4">Interessiert an Cosplay, aber nicht bereit, auf der Bühne zu stehen? Kein Problem! Wir suchen auch nach engagierten und leidenschaftlichen Cosplay-Enthusiasten, die als Jurymitglieder an unserem Wettbewerb teilnehmen möchten. Als Jurymitglied haben Sie die Möglichkeit, die erstaunlichen Kostüme und Performances unserer Teilnehmer zu bewerten und dabei zu helfen, den Gewinner unseres Wettbewerbs zu bestimmen.</p>
-                    <a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSeQYk_MzoLo75lKKsYjAip9sEPkkfKo14EIg6UrDcitfvrzqQ/viewform?usp=sf_link" target="_blank">Bewerbung</a>
-                </div>
-            </div>
+        @* <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="https://i.imgur.com/ttcVzBP.jpeg"></div> *@
+        @* <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
+        <div>
+        <h5 class="fw-bold">Mitmachen als Jurymitglied</h5>
+        <p class="text-muted mb-4">Interessiert an Cosplay, aber nicht bereit, auf der Bühne zu stehen? Kein Problem! Wir suchen auch nach engagierten und leidenschaftlichen Cosplay-Enthusiasten, die als Jurymitglieder an unserem Wettbewerb teilnehmen möchten. Als Jurymitglied haben Sie die Möglichkeit, die erstaunlichen Kostüme und Performances unserer Teilnehmer zu bewerten und dabei zu helfen, den Gewinner unseres Wettbewerbs zu bestimmen.</p>
+        <a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSeQYk_MzoLo75lKKsYjAip9sEPkkfKo14EIg6UrDcitfvrzqQ/viewform?usp=sf_link" target="_blank">Bewerbung</a>
+        </div>
+        </div>
         </div> *@
     </div><!-- End: Features Cards -->
 </section>
