--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -16,7 +16,7 @@
             <div class="col mb-5"><img class="rounded img-fluid shadow" src="assets/img/Eventbilder/Franco/DSC00317.jpg"></div>
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
-                    <h5 class="fw-bold">Cosplaywettbewerb</h5>
+                    <h5 class="fw-bold">Cosplaywettbewerb (ASCC lite)</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
                     <div class="row">
                         <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
