--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -18,8 +18,8 @@
                 <div>
                     <h5 class="fw-bold">Cosplaywettbewerb (ASCC lite)</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
-                    <div class="row">
-                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
+                    <div class="row" style="margin-bottom: 20px">
+                        <div class="col-auto"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
                     </div>
                     <div class="row">
                         <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/13HXV5XjPAuU53CHusSswB2PoD3VYthqJ/view?usp=drive_link" target="_blank">Regeln</a></div>
