Different color button

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -23,7 +23,7 @@
                     </div>
                     <div class="row">
                         <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/13HXV5XjPAuU53CHusSswB2PoD3VYthqJ/view?usp=drive_link" target="_blank">Regeln</a></div>
-                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://drive.google.com/file/d/12zjENeiqApSROaXfkTy_bhcPlqsUGt8y/view?usp=drive_link" target="_blank">Erklärung</a></div>
+                        <div class="col"><a class="btn btn-warning shadow" role="button" href="https://drive.google.com/file/d/12zjENeiqApSROaXfkTy_bhcPlqsUGt8y/view?usp=drive_link" target="_blank">Erklärung</a></div>
                     </div>
                 </div>
             </div>
