Update discord invitation

--- a/SAMT-Website/Pages/Contact.razor
+++ b/SAMT-Website/Pages/Contact.razor
@@ -40,7 +40,7 @@
                                 <p class="text-muted mb-0">@("samt_siegen")</p>
                             </div>
                         </div>
-                    </a><a href="https://discord.gg/QHC3UE9" target="_blank" rel="external">
+                    </a><a href="https://discord.gg/7tDne6fV92" target="_blank" rel="external">
                         <div class="d-flex align-items-center p-3">
                             <div class="bs-icon-md bs-icon-circle bs-icon-primary shadow d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon bs-icon-md">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord">
@@ -49,7 +49,7 @@
                             </div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Discord</h6>
-                                <p class="text-muted mb-0">https://discord.gg/QHC3UE9</p>
+                                <p class="text-muted mb-0">https://discord.gg/7tDne6fV92</p>
                             </div>
                         </div>
                     </a><a href="mailto:info@samt-con.de" target="_blank">
