Remove application for cosplay contest at specified time TEMP

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -18,9 +18,11 @@
                 <div>
                     <h5 class="fw-bold">Cosplaywettbewerb (ASCC lite)</h5>
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
-                    <div class="row" style="margin-bottom: 20px">
-                        <div class="col-auto"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
-                    </div>
+                    @if(DateTime.Now < new DateTime(2024, 12, 12, 10, 00, 00)) { //TODO
+                        <div class="row" style="margin-bottom: 20px">
+                            <div class="col-auto"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/CZcB6YwmW1DATPRH6" target="_blank">Anmeldung</a></div>
+                        </div>
+                    }
                     <div class="row">
                         <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/13HXV5XjPAuU53CHusSswB2PoD3VYthqJ/view?usp=drive_link" target="_blank">Regeln</a></div>
                         <div class="col"><a class="btn btn-warning shadow" role="button" href="https://drive.google.com/file/d/12zjENeiqApSROaXfkTy_bhcPlqsUGt8y/view?usp=drive_link" target="_blank">Erklärung</a></div>
